--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
-  "name": "LQSound",
-  "version": "1.0.0",
+  "name": "Princeton LabQueue Extras",
+  "version": "1.0.1",
   "manifest_version": 2,
   "description": "Audio and browser notification when a student is added to labqueue",
   "icons": { "128": "play-icon.png" },
   "content_scripts": [
    {
       "matches": ["https://labqueue.io/*", "https://www.labqueue.io/*", "http://www.labqueue.io/*", "http://www.labqueue.io/*"],
-      "js": ["lqsound.user.js"]
+      "js": ["labqueue.user.js"]
     }
    ]
 }
